<resources>
    <string name="app_name">CriptoApp</string>
    <string name="coin_logo">coin_logo</string>
    <string name="coin_name_tag">Coin name:</string>
    <string name="day_max_tag">Day max:</string>
    <string name="day_min_tag">Day min:</string>
    <string name="last_update_tag">Last update:</string>
    <string name="last_market_tag">Last market:</string>
    <string name="coin_info_price_tag">Price:</string>
    <string name="coin_name_template">%s / %s</string>
    <string name="last_update_template">Last update: %s</string>
</resources>